// Vitest Snapshot v1

exports[`parseChart > works 1`] = `
{
  "tapNotes": [
    {
      "char": "N",
      "column": 0,
      "id": "1",
      "measureNumber": 0,
      "ms": 0,
    },
    {
      "char": "N",
      "column": 3,
      "id": "2",
      "measureNumber": 0,
      "ms": 500,
    },
    {
      "char": "N",
      "column": 1,
      "id": "3",
      "measureNumber": 0,
      "ms": 1000,
    },
    {
      "char": "N",
      "column": 2,
      "id": "4",
      "measureNumber": 0,
      "ms": 1500,
    },
    {
      "char": "N",
      "column": 0,
      "id": "5",
      "measureNumber": 1,
      "ms": 2000,
    },
    {
      "char": "N",
      "column": 3,
      "id": "6",
      "measureNumber": 1,
      "ms": 2250,
    },
    {
      "char": "N",
      "column": 0,
      "id": "7",
      "measureNumber": 1,
      "ms": 2500,
    },
    {
      "char": "N",
      "column": 3,
      "id": "8",
      "measureNumber": 1,
      "ms": 2750,
    },
    {
      "char": "N",
      "column": 0,
      "id": "9",
      "measureNumber": 1,
      "ms": 3000,
    },
    {
      "char": "N",
      "column": 1,
      "id": "10",
      "measureNumber": 1,
      "ms": 3000,
    },
    {
      "char": "N",
      "column": 2,
      "id": "11",
      "measureNumber": 1,
      "ms": 3250,
    },
    {
      "char": "N",
      "column": 3,
      "id": "12",
      "measureNumber": 1,
      "ms": 3250,
    },
    {
      "char": "N",
      "column": 0,
      "id": "13",
      "measureNumber": 1,
      "ms": 3500,
    },
    {
      "char": "N",
      "column": 3,
      "id": "14",
      "measureNumber": 1,
      "ms": 3500,
    },
    {
      "char": "N",
      "column": 1,
      "id": "15",
      "measureNumber": 1,
      "ms": 3750,
    },
    {
      "char": "N",
      "column": 2,
      "id": "16",
      "measureNumber": 1,
      "ms": 3750,
    },
  ],
}
`;

exports[`parseHoldsChart > supports multiple holds holds-simultaneously 1`] = `
{
  "holdNotes": [
    [
      {
        "char": "1",
        "column": 0,
        "id": "h1",
        "measureNumber": 0,
        "ms": 0,
      },
      {
        "char": "2",
        "column": 0,
        "id": "h3",
        "measureNumber": 0,
        "ms": 1000,
      },
    ],
    [
      {
        "char": "1",
        "column": 5,
        "id": "h2",
        "measureNumber": 0,
        "ms": 0,
      },
      {
        "char": "2",
        "column": 5,
        "id": "h4",
        "measureNumber": 0,
        "ms": 1000,
      },
    ],
  ],
}
`;

exports[`parseHoldsChart > works 1`] = `
{
  "holdNotes": [
    [
      {
        "char": "1",
        "column": 3,
        "id": "h3",
        "measureNumber": 1,
        "ms": 2000,
      },
      {
        "char": "2",
        "column": 3,
        "id": "h4",
        "measureNumber": 1,
        "ms": 2750,
      },
    ],
    [
      {
        "char": "1",
        "column": 0,
        "id": "h1",
        "measureNumber": 0,
        "ms": 0,
      },
      {
        "char": "2",
        "column": 0,
        "id": "h2",
        "measureNumber": 0,
        "ms": 1500,
      },
    ],
    [
      {
        "char": "1",
        "column": 3,
        "id": "h5",
        "measureNumber": 1,
        "ms": 3000,
      },
      {
        "char": "2",
        "column": 3,
        "id": "h6",
        "measureNumber": 1,
        "ms": 3750,
      },
    ],
  ],
}
`;
